--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,19 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "phpspec/phpspec": "^2.2@dev"
     },
+
+    "require-dev": {
+    "phpspec/phpspec": "~2.0"
+    },
+
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "phpunit/phpunit": "~4.0"
+        
     },
     "autoload": {
         "classmap": [
